test/test_units/test_kclvm/test_types/invalid_test_data/unique/unique_2.k
schema Person:
    name: str
    
Person = 1
